# health-agent

./: .gitignore  sync_hume.py
.framework/examples/: hermes-memory.yaml
.framework/schema/: project.schema.yaml
.framework/souls-template/: PROGRESS.md
.github/workflows/: ci.yml  ci.yml.placeholder
backend/: app.py  models.py  requirements.txt
docs/: EPICS.md  G0_HUME_DASHBOARD.md  G4_PROTOCOLS.md  TDD.md  prd.md
dummy/: EPICS.md  PROJECT.md  Plan.md  TASKLIST.md  TDD.md  prd.md  project.yaml
dummy/orchestrator/: GOAL.md  HISTORY.md  STATE.md
dummy/scripts/: heartbeat.sh  run_tests.sh
dummy/souls/: dummy-architect.md  dummy-auditor.md  dummy-developer.md  dummy-docs.md  dummy-orchestrator.md  dummy-planner.md  dummy-qa.md
dummy/src/: __init__.py  config.py  greet.py
dummy/tests/: __init__.py  test_basic.py  test_greet.py
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js  body-map.js  body-overview.js
health-agent/: PROJECT.md  schema.sql
health-agent/backend/: app.py  db.py  models.py
health-agent/docs/: EPICS.md  G0_HUME_DASHBOARD.md  G1_DATA_HUB.md  G2_INTELLIGENCE.md  G3_AUTOMATION.md  HEALTH_APP_SPEC.md  (+4 more)
hermes-memory/: TASKLIST.md  pyproject.toml
hermes-memory/docs/: GRAPH_G1_SCHEMA_EXTRACTION.md  GRAPH_G2_GRAPH_OPS.md  GRAPH_G3_TYPED_RELS.md  GRAPH_MEMORY.md  GRAPH_QUALITY.md  RUNBOOK.md
hermes-memory/orchestrator/: HISTORY.md  STATE.md
hermes-memory/orchestrator/audit/: PHASE_3_GATE_AUDIT.md  PHASE_5_GATE_AUDIT.md
hermes-memory/scripts/: orchestrator-heartbeat.sh
memory-hardening/: PROJECT.md  TASKLIST.md
(+308 files in other folders)
